--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,14 @@
 <body>
 <!--  app start -->
 
-<!-- <nwt-root>
+ <nwt-root>
   <div class="loader">
     <svg class="circular">
       <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
   </div>
-</nwt-root> -->
+</nwt-root>
 
 <!--  app end -->
-<h1>Hello Angular Fans</h1>
 </body>
 </html>
